# rust_template

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  cargo-generate.toml
src/: lib.rs
src/tests/: mod.rs
